Updated imagesdir to reflect path of images folder

--- a/docs/hal/pyvcp.asciidoc
+++ b/docs/hal/pyvcp.asciidoc
@@ -2,7 +2,8 @@
 ---
     
 :skip-front-matter:
-:imagesdir: hal/images
+:imagesdir: /docs/hal/images
+:imagesoutdir: docs/hal/images
 
 = Python Virtual Control Panel
 :toc:
