--- a/docs/hal/halui_examples.asciidoc
+++ b/docs/hal/halui_examples.asciidoc
@@ -2,7 +2,8 @@
 ---
     
 :skip-front-matter:
-:imagesdir: hal/images
+:imagesdir: /docs/hal/images
+:imagesoutdir: docs/hal/images
 
 = Halui Examples
 :toc:
