Fixed images pahts in pyvpc_examples

--- a/docs/hal/pyvcp_examples.asciidoc
+++ b/docs/hal/pyvcp_examples.asciidoc
@@ -3,7 +3,8 @@
 
 :skip-front-matter:
 
-:imagesdir: /docs/config/images
+:imagesdir: /docs/hal/images
+:imagesoutdir: docs/hal/images
 
 = PyVCP Examples
 :toc:
