Add QtQuickVcp documentation to site docs
Add link in sidebar and developing indicies

Adapted from repo readme.md
Doubtless capable of polishing:)

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/developing/develop-index.asciidoc
+++ b/docs/developing/develop-index.asciidoc
@@ -20,3 +20,5 @@
 - link:/docs/developing/toolchangers[Specific info on writing toolchanger components]
 
 - link:/docs/developing/CAN-developing[Information on developing using CAN]
+
+- link:/docs/developing/qtquickvcp[Installing Using and Developing for QtQuickVcp]
