Shorten First level title
This is used as title of link in right hand bar entry and needs to be briefer

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/developing/qtquickvcp.asciidoc
+++ b/docs/developing/qtquickvcp.asciidoc
@@ -3,10 +3,10 @@
 
 :skip-front-matter:
 
-= QtQuick Virtual Control Panel
+= QtQuickVcp
 :toc:
 
-
+The QtQuick Virtual Control Panel
 
 == QtQuickVcp?
 
