Capitalise and shorten top level header title
Used as menu link in docs sidebar and needed to be shorter

--- a/docs/infra/repositories.asciidoc
+++ b/docs/infra/repositories.asciidoc
@@ -5,7 +5,7 @@
 :imagesoutdir: docs/infra/repositories
 
 :toc:
-= git repos & automated build flows
+= Git Repos & Auto Build
 
 There are quite a few
 https://github.com/machinekit[Machinekit git repositories].
