--- a/docs/index-documenting.asciidoc
+++ b/docs/index-documenting.asciidoc
@@ -3,7 +3,7 @@
 
 :skip-front-matter:
 
-= Documentation
+= Documenting
 
 
 - link:/docs/documenting/contributing-documentation[Contributing to documentation]
